i18n of Find bar to use locally correct numeric glyphs

BUG=612589
TEST=Switch to language with non-Arabic numerals (e.g., Persian), CTRL+F
to find on page, enter some word.  Check that numbers (e.g., "3 of 12")
are rendered with non-Arabic numerals.

Review-Url: https://codereview.chromium.org/1981193004
Cr-Commit-Position: refs/heads/master@{#394995}